# echo

./: .cursorrules  .gitignore  .lintstagedrc.json  .prettierignore  README.md  capacitor.config.ts  deweb_cli_config.buildnet.json  deweb_cli_config.dev.buildnet.json  deweb_cli_config.main.buildnet.json  eslint.config.js  index.html  package-lock.json  package.json  pwa-assets.config.ts  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  deweb-dev.yml  deweb-main.yml  deweb.yml  fastlane.yml  format.yml  ios-build.yml  rust-wasm.yml
android/: capacitor.settings.gradle
android/app/: capacitor.build.gradle
ios/App/: Podfile
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
public/favicon/: site.webmanifest
src/: App.css  App.tsx  PWABadge.tsx  db.ts  index.css  main.tsx  sw.ts
src/api/: messageProtocol.ts
src/components/: AccountBackup.tsx  AccountCreation.tsx  AccountImport.tsx  AccountSelection.tsx  AddressInput.tsx  AppHeader.tsx  BottomNavigation.tsx  Button.tsx  ContactCard.tsx  DebugPanel.tsx  Discussion.tsx  DiscussionHeader.tsx  DiscussionList.tsx  DiscussionListItem.tsx  ErrorBoundary.tsx  MainApp.tsx  MnemonicBackup.tsx  NewContact.tsx  NewDiscussion.tsx  OnboardingFlow.tsx  Popover.tsx  Select.tsx  Settings.tsx  ShareContact.tsx  TokenSelect.tsx  UsernameSetup.tsx  Wallet.tsx  WelcomeBack.tsx  debugLogs.ts
src/config/: protocol.ts  sync.ts
src/context/: theme-provider.tsx
src/crypto/: biometricService.ts  bip39.ts  discussionInit.ts  encryption.ts  keyDerivation.tsx  webauthn.ts
src/hooks/: useAccountInfo.ts  useAppStateRefresh.ts  useAuthRouting.ts  useBackgroundSync.ts  useContactForm.ts  useDiscussion.ts  useDiscussionList.ts  useFileShareContact.ts  useKeyDown.ts  useKeyDown.tsx  useLocalStorage.ts  useMessages.ts  usePreloadShareContact.ts  useProfileLoader.ts  useVersionCheck.ts
src/pages/: Contact.tsx  Discussion.tsx  Discussions.tsx  Login.tsx  NewContact.tsx  NewDiscussion.tsx  Settings.tsx  Wallet.tsx
src/routes/: AuthenticatedRoutes.tsx  OnboardingRoutes.tsx  UnauthenticatedRoutes.tsx
src/services/: announcement.ts  auth.ts  backgroundSync.ts  biometricService.ts  message.ts  messageReception.ts  messageSync.ts  messageTest.ts  notifications.ts  serviceWorkerSetup.ts
src/stores/: accountStore.tsx  appStore.tsx  discussionStore.tsx  messageStore.tsx  walletStore.tsx
src/tailwind-presets/: colors.js  default.js
src/temp/: useAllowance.tsx  useHandleOperation.tsx  useSend.ts
src/types/: webauthn.d.ts
src/utils/: addressUtils.ts  base64.ts  contacts.ts  fetchPrice.ts  index.ts  localStorage.ts  parseAmount.tsx  qrCodeColors.ts  qrCodeUrl.ts  timeUtils.ts  userIdUtils.ts  validation.ts
src/wasm/: WasmTestComponent.tsx  auth.ts  encryption.ts  index.ts  initializer.ts  loader.ts  session.ts  test.ts  types.ts  userId.ts  userKeys.ts  wasmSetup.ts
wasm/: Cargo.toml
wasm/auth/: Cargo.toml
wasm/crypto-aead/: Cargo.toml
wasm/crypto-agraphon/: Cargo.toml
wasm/crypto-agraphon/src/: agraphon.rs  announcement.rs  announcement_auth_kdf.rs  announcement_root_kdf.rs  history.rs  lib.rs  message_integrity_kdf.rs  message_root_kdf.rs  seeker_kdf.rs  static_kdf.rs  types.rs
wasm/crypto-cipher/: Cargo.toml
wasm/crypto-dsa/: Cargo.toml
wasm/crypto-kdf/: Cargo.toml
wasm/crypto-kem/: Cargo.toml
wasm/crypto-password-kdf/: Cargo.toml
wasm/crypto-rng/: Cargo.toml  README.md
wasm/crypto-rng/examples/: basic_usage.rs
wasm/crypto-rng/src/: lib.rs
wasm/echo-session/: Cargo.toml
wasm/main/: Cargo.toml  README.md
wasm/main/examples/: aead_usage.md
wasm/main/src/: lib.rs
wasm/session/: Cargo.toml
wasm/sessions/: Cargo.toml
wasm/sessions/src/: lib.rs  session.rs  session_manager.rs  utils.rs
(+94 files in other folders)
