[package]
name = "crypto-agraphon"
version.workspace = true
edition.workspace = true

[dependencies]
crypto-kem = { path = "../crypto-kem" }
crypto-kdf = { path = "../crypto-kdf" }
crypto-cipher = { path = "../crypto-cipher" }
crypto-rng = { path = "../crypto-rng" }

serde = { version = "1.0", features = ["derive"] }
zeroize = "1.8"
