[package]
name = "crypto-agraphon"
version.workspace = true
edition.workspace = true

[dependencies]
crypto-kem = { path = "../crypto-kem" }
crypto-kdf = { path = "../crypto-kdf" }
crypto-aead = { path = "../crypto-aead" }
crypto-rng = { path = "../crypto-rng" }

serde = { version = "1.0", features = ["derive"] }
subtle = "2.6"
zeroize = "1.8"
