[package]
name = "echo-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sessions = { path = "../sessions" }
auth = { path = "../auth" }
crypto-aead = { path = "../crypto-aead" }
crypto-rng = { path = "../crypto-rng" }

wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
bincode = "1.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-time = "1.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

