[package]
name = "sessions"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
auth = { path = "../auth" }
crypto-agraphon = { path = "../crypto-agraphon" }
crypto-rng = { path = "../crypto-rng" }
crypto-aead = { path = "../crypto-aead" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
zeroize = { version = "1.8", features = ["derive"] }
web-time = "1.1"

